Remove unnecessary package dependencies.

--- a/sample.html
+++ b/sample.html
@@ -8,12 +8,10 @@
 			font: 12px sans-serif;
 		}
 	</style>
-	<link rel="stylesheet/less" href="jquery.recurrence.less" />
-	<script type="text/javascript" src="node_modules/less/dist/less-1.7.0.min.js"></script>
+	<link rel="stylesheet" href="jquery.recurrence.css"/>
 	<script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
 	<script type="text/javascript" src="node_modules/rrule/lib/rrule.js"></script>
 	<script type="text/javascript" src="node_modules/rrule/lib/nlp.js"></script>
-	<script type="text/javascript" src="node_modules/underscore/underscore-min.js"></script>
 	<script type="text/javascript" src="node_modules/moment/min/moment.min.js"></script>
 	<script type="text/javascript" src="jquery.recurrence.js"></script>
 	<script type="text/javascript" src="sample.js"></script>
