--- a/sample.html
+++ b/sample.html
@@ -10,8 +10,13 @@
 	</style>
 	<link rel="stylesheet" href="jquery.recurrence.css"/>
 	<script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
+
+	<!-- If using older version of rrule, include it like this:
 	<script type="text/javascript" src="node_modules/rrule/lib/rrule.js"></script>
 	<script type="text/javascript" src="node_modules/rrule/lib/nlp.js"></script>
+	-->
+	<script type="text/javascript" src="node_modules/rrule/dist/es5/rrule-tz.min.js"></script>
+
 	<script type="text/javascript" src="node_modules/moment/min/moment.min.js"></script>
 	<script type="text/javascript" src="jquery.recurrence.js"></script>
 	<script type="text/javascript" src="sample.js"></script>
