--- a/sample.html
+++ b/sample.html
@@ -2,13 +2,8 @@
 <html>
 <head lang="en">
 	<meta charset="UTF-8">
-	<title></title>
-	<style>
-		html, body {
-			font: 12px sans-serif;
-		}
-	</style>
-	<link rel="stylesheet" href="jquery.recurrence.css"/>
+	<title>jQuery Recurrence Sample</title>
+	<link rel="stylesheet" href="sample.css"/>
 	<script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
 
 	<!-- If using older version of rrule, include it like this:
@@ -22,15 +17,18 @@
 </head>
 <body>
 
-	<div class="recurrence-container">
+	<div class="sample-container">
+		<p>Default settings recurrence.</p>
 		<div id="recurrence-1"></div>
-		<div class="text"></div>
+		<p class="text"></p>
+		<p class="rrule"></p>
 	</div>
 
-	<div class="recurrence-container">
-		<p>This recurrence is limited to a single day selection.</p>
+	<div class="sample-container">
+		<p>This recurrence is limited to single working day selection,<br/> initialized with an iCal recurrence rule and translated to german.</p>
 		<div id="recurrence-2"></div>
-		<div class="text"></div>
+		<p class="text"></p>
+		<p class="rrule"></p>
 	</div>
 
 </body>
