Add timezone support.

--- a/sample.html
+++ b/sample.html
@@ -25,7 +25,11 @@
 	</div>
 
 	<div class="sample-container">
-		<p>This recurrence is limited to single working day selection,<br/> initialized with an iCal recurrence rule and translated to german.</p>
+		<p>
+			This recurrence is limited to single working day selection,<br/>
+			initialized with an iCal recurrence rule and a specific timezone<br/>
+			and translated to german.
+		</p>
 		<div id="recurrence-2"></div>
 		<p class="text"></p>
 		<p class="rrule"></p>
