Reorganize project structure namespacing.

--- a/demo/sample.html
+++ b/demo/sample.html
@@ -4,15 +4,15 @@
 	<meta charset="UTF-8">
 	<title>jQuery Recurrence Sample</title>
 	<link rel="stylesheet" href="sample.css"/>
-	<script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
+	<script type="text/javascript" src="../node_modules/jquery/dist/jquery.min.js"></script>
 
 	<!-- If using older version of rrule, include it like this:
 	<script type="text/javascript" src="node_modules/rrule/lib/rrule.js"></script>
 	<script type="text/javascript" src="node_modules/rrule/lib/nlp.js"></script>
 	-->
-	<script type="text/javascript" src="node_modules/rrule/dist/es5/rrule-tz.min.js"></script>
+	<script type="text/javascript" src="../node_modules/rrule/dist/es5/rrule-tz.min.js"></script>
 
-	<script type="text/javascript" src="jquery.recurrence.js"></script>
+	<script type="text/javascript" src="../dist/ws-forms-recurrence.js"></script>
 	<script type="text/javascript" src="sample.js"></script>
 </head>
 <body>
