Fix formatting and add minified version.

--- a/demo/sample.html
+++ b/demo/sample.html
@@ -12,7 +12,7 @@
 	-->
 	<script type="text/javascript" src="../node_modules/rrule/dist/es5/rrule-tz.min.js"></script>
 
-	<script type="text/javascript" src="../dist/ws-forms-recurrence.js"></script>
+	<script type="text/javascript" src="../dist/ws-forms-recurrence.min.js"></script>
 	<script type="text/javascript" src="sample.js"></script>
 </head>
 <body>
